force-app/main/default/objects/PGFSubSection__c/PGFSubSection__c.object-meta.xml
<CustomObject>
    <description>Sub-section metadata object for framework.</description>
    <label>Sub-Section</label>
    <nameField>
        <label>FB_SubSection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>