force-app/main/default/objects/PGFSubSection__c/fields/Applicable_Delete_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Delete_Status__c</fullName>
    <label>Applicable Delete Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>