force-app/main/default/objects/PGFSubSection__c/fields/Applicable_Form_Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Form_Field_Labels__c</fullName>
    <label>Applicable Form Field Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>