force-app/main/default/objects/PGFSubSection__c/fields/Applicable_Form_Field_Validation__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Form_Field_Validation__c</fullName>
    <label>Applicable Form Field Validation</label>
    <type>TextArea</type>
</CustomField>