force-app/main/default/objects/PGFSubSection__c/fields/Applicable_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Record_Type__c</fullName>
    <label>Applicable Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>