force-app/main/default/objects/PGFSubSection__c/fields/ApplicableFields__c.field-meta.xml
<CustomField>
    <fullName>ApplicableFields__c</fullName>
    <description>Applicable Fields</description>
    <label>Applicable Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>