force-app/main/default/objects/PGFSubSection__c/fields/ApplicableFormFields__c.field-meta.xml
<CustomField>
    <fullName>ApplicableFormFields__c</fullName>
    <description>Applicable Form Fields</description>
    <label>Applicable Form Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>