force-app/main/default/objects/PGFSubSection__c/fields/ApplicableFormFieldsCss__c.field-meta.xml
<CustomField>
    <fullName>ApplicableFormFieldsCss__c</fullName>
    <label>Applicable Form Fields Css</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>