force-app/main/default/objects/PGFSubSection__c/fields/ApplicableObject__c.field-meta.xml
<CustomField>
    <fullName>ApplicableObject__c</fullName>
    <description>Applicable Object</description>
    <label>Applicable Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>