force-app/main/default/objects/PGFSubSection__c/fields/CLQ_Do_Not_Allow_Edit__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Do_Not_Allow_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Allow Edit</label>
    <type>Checkbox</type>
</CustomField>