force-app/main/default/objects/PGFSubSection__c/fields/Component_Error_message__c.field-meta.xml
<CustomField>
    <fullName>Component_Error_message__c</fullName>
    <label>Component Error message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>