force-app/main/default/objects/PGFSubSection__c/fields/ComponentAPIName__c.field-meta.xml
<CustomField>
    <fullName>ComponentAPIName__c</fullName>
    <description>Choose which component to add.</description>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TableComponent</fullName>
                <default>true</default>
                <label>Table Component</label>
            </value>
            <value>
                <fullName>FileUpload</fullName>
                <label>File Upload</label>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>