force-app/main/default/objects/PGFSubSection__c/fields/Create_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Create_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Transaction</label>
    <type>Checkbox</type>
</CustomField>