force-app/main/default/objects/PGFSubSection__c/fields/HtmlTextBody__c.field-meta.xml
<CustomField>
    <fullName>HtmlTextBody__c</fullName>
    <description>Html Text Body</description>
    <label>Html Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>