force-app/main/default/objects/PGFSubSection__c/fields/IsATextBlockType__c.field-meta.xml
<CustomField>
    <fullName>IsATextBlockType__c</fullName>
    <formula>ISPICKVAL(Type__c,&quot;Textblock&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsATextBlockType?</label>
    <type>Checkbox</type>
</CustomField>