force-app/main/default/objects/PGFSubSection__c/fields/isDeleteable__c.field-meta.xml
<CustomField>
    <fullName>isDeleteable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeleteable</label>
    <type>Checkbox</type>
</CustomField>