force-app/main/default/objects/PGFSubSection__c/fields/Layout_Columns__c.field-meta.xml
<CustomField>
    <fullName>Layout_Columns__c</fullName>
    <description>The number of columns inside subsection</description>
    <label>Layout Columns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Column</fullName>
            </value>
            <value>
                <fullName>2-Column</fullName>
            </value>
            <value>
                <fullName>3-Column</fullName>
            </value>
            <value>
                <fullName>4-Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>