force-app/main/default/objects/PGFSubSection__c/fields/Minimum_Records_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Records_Required__c</fullName>
    <label>Minimum Records Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>