force-app/main/default/objects/PGFSubSection__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <formula>Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page</label>
    <type>Text</type>
</CustomField>