force-app/main/default/objects/PGFSubSection__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Parent section</description>
    <label>Section</label>
    <referenceTo>PGFSection__c</referenceTo>
    <relationshipLabel>Sub Sections</relationshipLabel>
    <relationshipName>Sub_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>