force-app/main/default/objects/PGFSubSection__c/fields/QueryWhereClause__c.field-meta.xml
<CustomField>
    <fullName>QueryWhereClause__c</fullName>
    <description>Query Where Clause</description>
    <label>Query Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>