force-app/main/default/objects/PGFSubSection__c/fields/Section_Id__c.field-meta.xml
<CustomField>
    <fullName>Section_Id__c</fullName>
    <description>Section Id</description>
    <externalId>true</externalId>
    <label>Section Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>