force-app/main/default/objects/PGFSubSection__c/fields/SubSection_Id__c.field-meta.xml
<CustomField>
    <fullName>SubSection_Id__c</fullName>
    <description>SubSection Id</description>
    <externalId>true</externalId>
    <label>SubSection Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>