force-app/main/default/objects/PGFSubSection__c/fields/TextBlockBody__c.field-meta.xml
<CustomField>
    <fullName>TextBlockBody__c</fullName>
    <description>Text Block Body</description>
    <label>Text Block Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>