force-app/main/default/objects/PGFSubSection__c/fields/Transaction_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Record_Type__c</fullName>
    <formula>Parent__r.Parent__r.TransactionRecordType__c</formula>
    <label>Transaction Record Type</label>
    <type>Text</type>
</CustomField>