force-app/main/default/objects/PGFSubSection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Sub-section type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fieldset</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Textblock</fullName>
            </value>
            <value>
                <fullName>Hidden Fieldset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>