force-app/main/default/objects/PGFSubSection__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>TextBlockBody__c</columns>
    <columns>ComponentAPIName__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Description__c</columns>
    <columns>Label__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>