force-app/main/default/objects/PGFSubSection__c/listViews/Table_Comp.listView-meta.xml
<ListView>
    <fullName>Table_Comp</fullName>
    <columns>NAME</columns>
    <columns>QueryWhereClause__c</columns>
    <columns>Label__c</columns>
    <columns>Role__c</columns>
    <columns>isDeleteable__c</columns>
    <columns>Create_Transaction__c</columns>
    <columns>ParentName__c</columns>
    <columns>ComponentAPIName__c</columns>
    <columns>Minimum_Records_Required__c</columns>
    <columns>Component_Error_message__c</columns>
    <columns>Type__c</columns>
    <columns>Section_Id__c</columns>
    <columns>SubSection_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ComponentAPIName__c</field>
        <operation>equals</operation>
        <value>TableComponent</value>
    </filters>
    <label>Table Comp</label>
</ListView>